--- a/src/style/_style.scss
+++ b/src/style/_style.scss
@@ -1,3 +1,15 @@
 * {
   padding: 0;
 }
+
+h1 {
+  text-align: center;
+}
+
+body {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
