Intro section was added

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,5 +2,6 @@
 @import 'style/_var';
 @import 'style/_common';
 @import 'style/_header';
+@import 'style/_intro';
 @import 'style/_main';
 @import 'style/animations'
