--- a/src/style/_var.scss
+++ b/src/style/_var.scss
@@ -1,29 +1,33 @@
 // colors
-
-$dark-blue: #37517e;
-$blue: #0d6efd;
-$indigo: #6610f2;
-$purple: #6f42c1;
-$pink: #d63384;
-$red: #dc3545;
-$orange: #fd7e14;
-$yellow: #ffc107;
-$green: #198754;
-$teal: #20c997;
-$cyan: #0dcaf0;
-$white: #fff;
-$gray: #6c757d;
-$gray-dark: #343a40;
-$primary: #0d6efd;
-$secondary: #6c757d;
-$success: #198754;
-$info: #0dcaf0;
-$warning: #ffc107;
-$danger: #dc3545;
-$light: #f8f9fa;
+$dark-blue:#37517e;
+$hover-blue: #209dd8;
+$light-blue:#47b2e4;
+$white:#fff;
 $dark: #212529;
+$cyan: #0dcaf0;
+
+// $blue: #0d6efd;
+// $indigo: #6610f2;
+// $purple: #6f42c1;
+// $pink: #d63384;
+// $red: #dc3545;
+// $orange: #fd7e14;
+// $yellow: #ffc107;
+// $green: #198754;
+// $teal: #20c997;
+// $gray: #6c757d;
+// $gray-dark: #343a40;
+// $primary: #0d6efd;
+// $secondary: #6c757d;
+// $success: #198754;
+// $info: #0dcaf0;
+// $warning: #ffc107;
+// $danger: #dc3545;
+// $light: #f8f9fa;
+
 //border-radius
 $brs-small: 4px;
+$brs-btn: 50px;
 
 //box-shadow
 $box-shadow-small: 0 0 30px rgb(127 137 161 / 25%);
