--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -5,6 +5,7 @@
     position: fixed;
     left: 0;
     top: 0;
+    display: none;
 
     &-content {
         display: flex;
@@ -20,7 +21,7 @@
 }
 
 .main-nav {
-    display: none;
+    display: flex;
 
     &__list {
         display: flex;
