--- a/src/style/_common.scss
+++ b/src/style/_common.scss
@@ -1,4 +1,8 @@
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   color: $dark;
@@ -16,8 +20,10 @@ button {
 
 .container {
   max-width: 1320px;
+  min-width: 320px;
   width: 100%;
   margin: 0 auto;
+  padding: 0 10px;
 }
 
 .img-responsive {
